--- a/styles/style.css
+++ b/styles/style.css
@@ -172,7 +172,7 @@
      margin-bottom: 60px;
  }
 
- .section-part .section-heading {
+ .section-heading {
      color: white;
      font-size: 40px;
      font-weight: 800;
@@ -244,6 +244,13 @@
      justify-content: end;
  }
 
+ .btn-primary1 {
+     width: 140px;
+     padding: 14px;
+     border-radius: 10px;
+     background: #E6533C;
+ }
+
  /* exersise */
  .exercise-part {
      width: 90%;
@@ -262,66 +269,70 @@
  }
 
  /* BMI SECTION */
- .bmi-section{
-    display: flex;
-    gap: 30px;
-    background: #222222;
-    width: 90%;
-    margin: auto;
-    padding: 40px;
-    border-radius: 12px;
+ .bmi-section {
+     display: flex;
+     gap: 30px;
+     background: #222222;
+     width: 90%;
+     margin: auto;
+     padding: 40px;
+     border-radius: 12px;
  }
- .bmi-section-leftPart{
-    width: 50%;
-    color: white;
+
+ .bmi-section-leftPart {
+     width: 50%;
+     color: white;
  }
- .bmi-section-rightPart{
-    width: 50%;
+
+ .bmi-section-rightPart {
+     width: 50%;
  }
- .bmi-section-rightPart h1{
-    color: white;
-    font-size: 30px;
-    margin-bottom: 10px;
+
+ .bmi-section-rightPart h1 {
+     color: white;
+     font-size: 30px;
+     margin-bottom: 10px;
  }
- .bmi-section-rightPart p{
-    color: white;
+
+ .bmi-section-rightPart p {
+     color: white;
      opacity: 60%;
-      margin-bottom: 10px;
+     margin-bottom: 10px;
  }
- .btn-calculte{
-    width: 120px;
-    padding: 10px;
-    border-radius: 10px;
-    color: white;
-    font: 10px;
-    background: #E6533C;
+
+ .btn-calculte {
+     width: 120px;
+     padding: 10px;
+     border-radius: 10px;
+     color: white;
+     font: 10px;
+     background: #E6533C;
  }
- .bmi-section-rightPart input{
-    padding: 7px;
-    border-radius: 10px;
-    background-color: #4a46466c;
-    margin-bottom: 10px;
+
+ .bmi-section-rightPart input {
+     padding: 7px;
+     border-radius: 10px;
+     background-color: #4a46466c;
+     margin-bottom: 10px;
  }
- .age-sex{
-    display: flex;
-    gap: 10px; 
-    position: relative;
-}
-.gender-icon i{
-    top: 8px;
-    left: 340px;
-    position: absolute;
-}
-.last-input input{
-    width: 72%;
-    padding: 10px;
-    position: relative;
-}
+
+ .age-sex {
+     display: flex;
+     gap: 10px;
+     position: relative;
+ }
+
+
+ .last-input input {
+     width: 72%;
+     padding: 10px;
+     position: relative;
+ }
 
  .bmi-heading {
      margin-top: 30px;
      margin-bottom: 30px;
-  
+
  }
 
  .bmi-heading h1 {
@@ -333,26 +344,32 @@
      justify-content: center;
      align-items: center;
      margin-right: 290px;
-   
+
  }
-.bmi-chart-heading{
-    color: white;
-    font-size: 30px;
-    font-weight: 800;
-    margin-bottom: 20px;
-}
+
+ .bmi-chart-heading {
+     color: white;
+     font-size: 30px;
+     font-weight: 800;
+     margin-bottom: 20px;
+ }
+
  table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-  td{
-    opacity: 60%;
-  }
-  td, th {
-    border: 1px solid black;
-    text-align: left;
-    padding: 8px;
-  }
+     border-collapse: collapse;
+     width: 100%;
+ }
+
+ td {
+     opacity: 60%;
+ }
+
+ td,
+ th {
+     border: 1px solid black;
+     text-align: left;
+     padding: 8px;
+ }
+
  .bmi-heading p {
      opacity: 60%;
      color: white;
@@ -402,73 +419,89 @@
      height: 270px;
      border-radius: 10px;
  }
+
  /* footer */
-.footer{
-    background: #373636;
-}
-.footer-section{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 100px;
-    width: 90%;
-    margin: auto;
-    padding: 30px;
-}
+ .footer {
+     background: #373636;
+ }
 
-.fitness-1 {
-    width: 30%;
-}
-.fitness-1 h1{
-    color: #E6533C;
-    margin-bottom: 10px;
-}
-.fitness-1 p{
-    color: white;
-    opacity: 60%;
-}
-.get-started{
-width: 30%;
-justify-content: end;
-line-height: 25px;
-margin-left: 70px;
-}
-.get-started h3{
-    color: white;
-    margin-bottom: 20px;
-}
-.get-started p{
-    color: white;
-    opacity: 60%;
-}
-.get-started-2 {
-width: 30%;
-line-height: 25px;
-}
+ .footer-section {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     margin-bottom: 100px;
+     width: 90%;
+     margin: auto;
+     padding: 30px;
+ }
 
-.get-started-2 h3{
-    color: white;
-    margin-bottom: 20px;
-}
-.get-started-2 p{
-    color: white;
-    opacity: 60%;
-}
-.hr-line{
-    width: 90%;
-    margin: auto;
-    opacity: 60%;
-}
-.copy-right{
-    text-align: center;
-    opacity: 60%;
-    color: white;
-    margin-top: 10px;
-}
+ .fitness-1 {
+     width: 30%;
+ }
 
+ .fitness-1 h1 {
+     color: #E6533C;
+     margin-bottom: 10px;
+ }
+
+ .fitness-1 p {
+     color: white;
+     opacity: 60%;
+ }
+
+ .get-started {
+     width: 30%;
+     justify-content: end;
+     line-height: 25px;
+     margin-left: 70px;
+ }
+
+ .get-started h3 {
+     color: white;
+     margin-bottom: 20px;
+ }
+
+ .get-started p {
+     color: white;
+     opacity: 60%;
+ }
+
+ .get-started-2 {
+     width: 30%;
+     line-height: 25px;
+ }
+
+ .get-started-2 h3 {
+     color: white;
+     margin-bottom: 20px;
+ }
+
+ .get-started-2 p {
+     color: white;
+     opacity: 60%;
+ }
+
+ .hr-line {
+     width: 90%;
+     margin: auto;
+     opacity: 60%;
+ }
+
+ .copy-right {
+     text-align: center;
+     opacity: 60%;
+     color: white;
+     margin-top: 10px;
+ }
+
+
+
+ .hidden {
+     display: none;
+ }
 
  /* Responsive Styles */
- @media (max-width: 768px) {
+ @media (max-width: 320px) {
      .nav-links {
          display: none;
          text-align: center;
@@ -481,4 +514,175 @@ line-height: 25px;
      .icon {
          display: flex;
      }
+
+     .banner {
+         flex-direction: column;
+         width: 100%;
+         justify-content: center;
+     }
+
+     .left-part {
+         width: 100%;
+     }
+
+     .banner-heading {
+         width: 100%;
+         font-size: 32px;
+         font-weight: 800;
+         color: white;
+         margin-bottom: 20px;
+         padding-left: 20px;
+     }
+
+     .banner-description {
+         padding-left: 20px;
+     }
+
+     .btn-primary {
+         width: 50%;
+         color: white;
+         font-size: 10px;
+         padding: 13px;
+         border-radius: 10px;
+         background-color: #E6533C;
+     }
+
+     .btn-primary2 {
+         width: 50%;
+         font-size: 10px;
+         padding: 13px;
+         border-radius: 10px;
+         background-color: black;
+         color: white;
+     }
+
+     .banner-btn {
+         padding: 10px;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+     }
+
+     .img-card-top {
+         background-color: rgba(62, 64, 65, 0.738);
+         width: 130px;
+         height: 80px;
+         border-radius: 10px;
+         text-align: center;
+         position: absolute;
+         left: 90px;
+         top: 50px;
+         color: white;
+     }
+
+     .img-card {
+         background-color: rgba(62, 64, 65, 0.738);
+         width: 160px;
+         height: 80px;
+         border-radius: 13px;
+         position: absolute;
+         color: white;
+     }
+
+     .section-heading {
+         color: white;
+         font-size: 20px;
+         font-weight: 800;
+     }
+
+     .section-part p {
+         padding: 10px;
+     }
+
+     .img-container {
+         flex-direction: column;
+         margin-bottom: 10px;
+     }
+
+     .img-card-1 {
+         margin-bottom: 15px;
+         margin-top: 10px;
+     }
+
+     .img-card-1 img {
+         margin-bottom: 10px;
+     }
+
+     .walk-section {
+         width: 90%;
+         margin: auto;
+         flex-direction: column;
+         justify-content: space-between;
+         background-color: #373636;
+         padding: 20px;
+         border-radius: 15px;
+     }
+
+     .walk-section h1 {
+         margin-bottom: 10px;
+         font-size: 30px;
+         color: white;
+     }
+
+     .walk-img img {
+         margin-top: 10px;
+         width: 100%;
+         border-radius: 20px;
+     }
+
+     .btn-primary1 {
+         width: 100%;
+     }
+
+     .bmi-section {
+         flex-direction: column;
+         gap: 30px;
+         background: #222222;
+         width: 90%;
+         margin: auto;
+         padding: 10px;
+         border-radius: 12px;
+     }
+     .age-sex {
+        display: flex;
+        gap: 10px;
+        position: relative;
+    }
+
+     .bmi-chart-heading {
+         color: white;
+         font-size: 15px;
+         font-weight: 800;
+         margin-bottom: 20px;
+     }
+
+     .bmi-section-leftPart {
+         width: 100%;
+     }
+
+     .bmi-section-rightPart {
+         width: 100%;
+     }
+
+     .bmi-section-rightPart h1 {
+         font-size: 15px;
+         margin-bottom: 10px;
+     }
+     .Height-weight{
+        display: flex;
+     }
+     .bmi-section-rightPart input {
+        padding: 3px;
+        width: 50%;
+        border-radius: 10px;
+        background-color: #4a46466c;
+        margin-bottom: 10px;
+    }
+    .last-input input {
+        width: 100%;
+    }
+    .btn-calculte {
+        width: 100%;
+    }
+
  }
